--- a/Section1/Equally-likely-outcomes/Equally-likely-outcomes.tex
+++ b/Section1/Equally-likely-outcomes/Equally-likely-outcomes.tex
@@ -27,12 +27,12 @@ a)  How many $5$ card hands contain at least one pair?  (two cards of the same v
            The answer is \answer{$1281072$}.
      \end{solution}
      
-b)  How many $5$ card hands contain a three of a kind?  (three cards of the same value)
+b)  How many $5$ card hands contain a three of a kind?  (three cards of the same value, and two cards of $2$ different values)
      \begin{solution}
            The answer is \answer{$54912$}.
      \end{solution}
      
-c)  How many $5$ card hands are a full house?  (a paird of on value and three of a kind of another value)
+c)  How many $5$ card hands are a full house?  (a pair of one value and three of a kind of another value)
      \begin{solution}
            The answer is \answer{$3744$}.
      \end{solution}
@@ -61,14 +61,14 @@ a)  Determine the probability that the sum of the faces up is $n$.
 
 b)  Determine the probability that the sum of the faces up is $2n$.
      \begin{solution}
-           The answer is \answer{$1/2$}.
+           The answer is \answer{$1/n$}.
      \end{solution}
 \end{question}
 
 \begin{question}
-Suppose that you and a friend play a game with the following rules:  there is a green player and a blue player,  there are $2$ green marbles and $2$ blue marbles in a hat, the players alternate drawing a marble from the hat, and a coin is tossed to determine who goes first.  To win, a player must draw their marble (the green player must draw a green marble to win), and if a player does not draw their marble, then they add a marble of the opponents color to the hat.  Suppose that the green player has won the coin toss.  Determine the probability that the blue player wins on or before his/her second turn.
+Suppose that you and a friend play a game with the following rules:  there is a green player and a blue player,  there are $2$ green marbles and $2$ blue marbles in a hat, the players alternate drawing a marble from the hat, and a coin is tossed to determine who goes first.  To win, a player must draw their marble (the green player must draw a green marble to win), and if a player does not draw their marble, then they put the drawn marble back into the hat and add a marble of the opponents color to the hat.  Suppose that the green player has won the coin toss.  Determine the probability that the blue player wins on or before his/her second turn.
      \begin{solution}
-           The answer is \answer{$5/16$}.
+           The answer is \answer{$5/14$}.
      \end{solution}
 \end{question}
 
