--- a/Section1/Equally-likely-outcomes/Equally-likely-outcomes.tex
+++ b/Section1/Equally-likely-outcomes/Equally-likely-outcomes.tex
@@ -20,11 +20,11 @@ How many "words" can be spelled using the letters from the work assassins (inclu
 \end{question}
 
 \begin{question}
-In a standard $52$ card deck there are $4$ suits:  spades, hearts, diamonds, and clubs.  Each suit consists of 13 different values:  $2$, $3$, ..., $10$, J, Q, K, A. 
+In a standard $52$ card deck there are $4$ suits:  spades, hearts, diamonds, and clubs.  Each suit consists of $13$ different values:  $2$, $3$, ..., $10$, J, Q, K, A. 
 
-a)  How many $5$ card hands contain at least one pair?  (two cards of the same value)
+a)  How many $5$ card hands contain exactly one pair?  (two cards of the same value, and $3$ cards of $3$ different values)
      \begin{solution}
-           The answer is \answer{$1281072$}.
+           The answer is \answer{$1098240$}.
      \end{solution}
      
 b)  How many $5$ card hands contain a three of a kind?  (three cards of the same value, and two cards of $2$ different values)
@@ -39,7 +39,7 @@ c)  How many $5$ card hands are a full house?  (a pair of one value and three of
 \end{question}
 
 \begin{question}
-What are the probabilities of each of the hands in a, b, and c from question 2?
+What are the probabilities of each of the hands in a, b, and c from question $2$?
      \begin{solution}
            The probability of the event a is \answer{$1281072/2598960$}.
      \end{solution}
