--- a/masterdocument.tex
+++ b/masterdocument.tex
@@ -1,6 +1,6 @@
 \documentclass[numbers,handout,twoside]{ximera}
 
-\input{./preamble.tex}
+%\input{./preamble.tex}
 
 \let\masterdocument\document
 \let\endmasterdocument\enddocument
