--- a/Section1/Equally-likely-outcomes/Equally-likely-outcomes.tex
+++ b/Section1/Equally-likely-outcomes/Equally-likely-outcomes.tex
@@ -19,19 +19,23 @@ How many "words" can be spelled using the letters from the work assassins (inclu
      \end{solution}
 \end{question}
 
-\begin{question}
 In a standard $52$ card deck there are $4$ suits:  spades, hearts, diamonds, and clubs.  Each suit consists of $13$ different values:  $2$, $3$, ..., $10$, J, Q, K, A. 
 
+\begin{question}
 a)  How many $5$ card hands contain exactly one pair?  (two cards of the same value, and $3$ cards of $3$ different values)
      \begin{solution}
            The answer is \answer{$1098240$}.
      \end{solution}
-     
+\end{question}     
+
+\begin{question}     
 b)  How many $5$ card hands contain a three of a kind?  (three cards of the same value, and two cards of $2$ different values)
      \begin{solution}
            The answer is \answer{$54912$}.
      \end{solution}
-     
+\end{question}     
+
+\begin{question}     
 c)  How many $5$ card hands are a full house?  (a pair of one value and three of a kind of another value)
      \begin{solution}
            The answer is \answer{$3744$}.
@@ -51,14 +55,16 @@ What are the probabilities of each of the hands in a, b, and c from question $2$
      \end{solution}
 \end{question}
 
-\begin{question}
 Suppose that you have two fair dice with $n$ sides.  The first die has faces with numbers $1, 2, ..., n$  The second die has faces with numbers $n, n+1, n+2, ..., 2n-1$.  You roll the dice.
 
+\begin{question}
 a)  Determine the probability that the sum of the faces up is $n$.
      \begin{solution}
            The answer is \answer{$0$}.
      \end{solution}
+\end{question}
 
+\begin{question}
 b)  Determine the probability that the sum of the faces up is $2n$.
      \begin{solution}
            The answer is \answer{$1/n$}.
