--- a/Section1/Bayes-rule/Bayes-rule.tex
+++ b/Section1/Bayes-rule/Bayes-rule.tex
@@ -12,46 +12,52 @@ Bayes' rule
 \end{abstract}
 \maketitle
 
-\begin{question}
+{\it For the following problems a suitable tree diagram can help you.}\vspace{.25cm}
+
 {\bf Polya's urn scheme.} An urn contains $4$ white balls and $6$ black balls. A ball is chosen at random, and its color noted. The ball is then replaced, along with $3$ more balls of the same color (so that there are now $13$ balls in the urn). Then another ball is drawn at random from the urn.
 
+\begin{question}
 a) Find the chance that the second ball drawn is white.
      \begin{solution}
-          \begin{hint}
-               Draw an appropriate tree diagram.
-          \end{hint}
           The answer is \answer{$2/5$}.
       \end{solution}
+\end{question}
 
+\begin{question}
 b) Given that the second ball drawn is white, what is the probability that the first ball drawn is black ?
      \begin{solution}
           The answer is \answer{$6/13$}.
       \end{solution}
-
+\end{question}
+      
+\begin{question}
 c) Suppose the original contents of the urn are $w$ white and $b$ blacks balls, and that after a ball is drawn from the urn, it is replaced along with $d$ more balls of the same color. Show that the chance that the second ball drawn is white is $\frac{w}{w+b}$  
 \end{question}
 
-\begin{question}
 {\bf False diagnostic.} The fraction of persons in a population who have a certain disease is $0.01$. A diagnostic test is available to test for the disease. But for a healthy person the chance of being falsely diagnosed as having the disease is $0.05$, while for someone with the disease the chance of being falsely diagnosed as healthy is $0.2$. Suppose the test is performed on a person selected at random from the population.
 
+\begin{question}
 a) What is the probability that the test shows a positive result (meaning the person is diagnoses as diseased, perhaps correctly, perhaps no?)
      \begin{solution}
-          \begin{hint}
-               Draw an appropriate tree diagram.
-          \end{hint}
           The answer is \answer{$0.0575$} .
       \end{solution}
+\end{question}
 
+\begin{question}
 b) What is the probability that the person selected at random is one who has the disease but is diagnosed healthy?
      \begin{solution}
           The answer is \answer{$0.002$}.
       \end{solution}
+\end{question}
 
+\begin{question}
 c) What is the probability that the person is correctly diagnosed and is healthy?
      \begin{solution}
           The answer is \answer{$0.9405$}.
       \end{solution}
+\end{question}
 
+\begin{question}
 d) Suppose the test shows a positive result. What is the probability that the person tested actually has the disease?
      \begin{solution}
           The answer is \answer{$16/115$}.
