--- a/Section1/Conditional-probability/Conditional-probability.tex
+++ b/Section1/Conditional-probability/Conditional-probability.tex
@@ -27,14 +27,34 @@ Given that it rains today, what it is the chance that it will rain tomorrow ?
      \end{solution}
 \end{question}
 
-\begin{question}
 There are two urns. The first urn contains $2$ black balls and $3$ white balls. The second urn contains $4$ black balls and $3$ white balls. An urn is chosen random, and a ball is chosen at random from that urn.
+     \begin{hint}
+          Draw a suitable tree diagram.
+     \end{hint}
 
-a) Draw a suitable tree diagram.
+\begin{question}
+a) Calculate the probability that the first urn was choose.
+     \begin{solution}
+           The answer is \answer{$1/2$}.
+     \end{solution}
+\end{question}
 
-b) Assign probabilities and conditional probabilities to the branches of the tree.
+\begin{question}
+b) Calculate the probability that the ball drawn is black given the first urn was chosen.
+     \begin{solution}
+           The answer is \answer{$2/3$}.
+     \end{solution}
+\end{question}
 
-c) Calculate the probability that the ball drawn is black.
+\begin{question}
+b) Calculate the probability that the ball drawn is white given the second urn was chosen.
+     \begin{solution}
+           The answer is \answer{$3/7$}.
+     \end{solution}
+\end{question}
+
+\begin{question}
+b) Calculate the probability that the ball drawn is black.
      \begin{solution}
            The answer is \answer{$17/35$}.
      \end{solution}
