--- a/Section1/Conditional-probability/Conditional-probability.tex
+++ b/Section1/Conditional-probability/Conditional-probability.tex
@@ -33,7 +33,7 @@ There are two urns. The first urn contains $2$ black balls and $3$ white balls. 
      \end{hint}
 
 \begin{question}
-a) Calculate the probability that the first urn was choose.
+a) Calculate the probability that the first urn was chosen.
      \begin{solution}
            The answer is \answer{$1/2$}.
      \end{solution}
@@ -42,7 +42,7 @@ a) Calculate the probability that the first urn was choose.
 \begin{question}
 b) Calculate the probability that the ball drawn is black given the first urn was chosen.
      \begin{solution}
-           The answer is \answer{$2/3$}.
+           The answer is \answer{$2/5$}.
      \end{solution}
 \end{question}
 
