--- a/Section1/Bayes-rule/Bayes-rule.tex
+++ b/Section1/Bayes-rule/Bayes-rule.tex
@@ -31,7 +31,7 @@ b) Given that the second ball drawn is white, what is the probability that the f
 \end{question}
       
 \begin{question}
-c) Suppose the original contents of the urn are $w$ white and $b$ blacks balls, and that after a ball is drawn from the urn, it is replaced along with $d$ more balls of the same color. Show that the chance that the second ball drawn is white is $\frac{w}{w+b}$  
+(Think about this generalization) Suppose the original contents of the urn are $w$ white and $b$ blacks balls, and that after a ball is drawn from the urn, it is replaced along with $d$ more balls of the same color. Show that the chance that the second ball drawn is white is $\frac{w}{w+b}$  
 \end{question}
 
 {\bf False diagnostic.} The fraction of persons in a population who have a certain disease is $0.01$. A diagnostic test is available to test for the disease. But for a healthy person the chance of being falsely diagnosed as having the disease is $0.05$, while for someone with the disease the chance of being falsely diagnosed as healthy is $0.2$. Suppose the test is performed on a person selected at random from the population.
