--- a/Section1/Equally-likely-outcomes/Equally-likely-outcomes.tex
+++ b/Section1/Equally-likely-outcomes/Equally-likely-outcomes.tex
@@ -42,14 +42,21 @@ c)  How many $5$ card hands are a full house?  (a pair of one value and three of
      \end{solution}
 \end{question}
 
+What are the probabilities of each of the hands in a, b, and c from the previous question ?
+
 \begin{question}
-What are the probabilities of each of the hands in a, b, and c from question $2$?
      \begin{solution}
-           The probability of the event a is \answer{$1281072/2598960$}.
+           The probability of the event a is \answer{$1098240/2598960$}.
      \end{solution}
+\end{question}
+
+\begin{question}     
       \begin{solution}
            The probability of the event b is \answer{$54912/2598960$}.
      \end{solution}
+\end{question}
+
+\begin{question}
       \begin{solution}
            The probability of the event c is \answer{$3744/2598960$}.
      \end{solution}
