--- a/Section1/Section1.tex
+++ b/Section1/Section1.tex
@@ -10,11 +10,11 @@ Introduction to probability.
 
 This section introduces the basic concepts of probability. \vspace{.25cm}
 
-We will consider experiments whose outcomes cannot be predicted with certain. Examples of an experiment include rolling a die or flipping two coins.
+We will consider experiments whose outcomes cannot be predicted with certainty. Examples of an experiment include rolling a die or flipping two coins.
 
 The {\it outcome space} $\Omega$ of an experiment is the set of all possible outcomes for the experiment. The outcome space for the experiment of rolling a dice is $\{\,1,2,3,4,5,6\,\}$ and the outcome space for the experiment of flipping two coins is $\{\, \text{Head-Head , Head-Tail, Tail-Head, Tail-Tail} \,\}$.
 
-An {\it event} $A$ is a subset of the sample space: the event of rolling an even number with a dice consist of three outcomes $\{\,2,4,6\,\}$ and the event of flipping two tails with two coins consist of one outcome $\{\, \text{Tail-Tail} \,\}$. 
+An {\it event} $A$ is a subset of the outcome space: the event of rolling an even number with a dice consist of three outcomes $\{\,2,4,6\,\}$ and the event of flipping two tails with two coins consist of one outcome $\{\, \text{Tail-Tail} \,\}$. 
 
 When the outcome of an experiment is just as likely as another, as in the previous two examples of experiments, the outcomes are said to be {\it equally likely}. \vspace{.25cm}
 
@@ -23,7 +23,8 @@ The following definition is from Wikipedia:
 \href{http://en.wikipedia.org/wiki/Probability}{Probability} is a measure of the likeliness that an event will occur. \vspace{.25cm}
 
 If the number of all outcomes $\Omega$ of an experiment is finite and are equally likely, then the probability of an event $A$ is defined by
-\[\text{Pr}(A) = \frac{ \#(A) }{ \#(\Omega)}.
+\[
+\text{Pr}(A) = \frac{ \#(A) }{ \#(\Omega)}.
 \]
 
 In section $6.1$ from \href{ http://www.feynmanlectures.caltech.edu/I_06.html#Ch6-S1}{The Feynman Lectures on Physics}, Feynman gives a nice explanation on how to justify the previous formula. If you have time you must read all Chapter $6$. \vspace{.25cm}
