--- a/Section1/Conditional-probability/Conditional-probability.tex
+++ b/Section1/Conditional-probability/Conditional-probability.tex
@@ -27,7 +27,7 @@ Given that it rains today, what it is the chance that it will rain tomorrow ?
      \end{solution}
 \end{question}
 
-There are two urns. The first urn contains $2$ black balls and $3$ white balls. The second urn contains $4$ black balls and $3$ white balls. An urn is chosen random, and a ball is chosen at random from that urn.
+There are two urns. The first urn contains $2$ black balls and $3$ white balls. The second urn contains $4$ black balls and $3$ white balls. An urn is chosen at random, and a ball is chosen at random from that urn.
      \begin{hint}
           Draw a suitable tree diagram.
      \end{hint}
