--- a/Section1/Equally-likely-outcomes/Equally-likely-outcomes.tex
+++ b/Section1/Equally-likely-outcomes/Equally-likely-outcomes.tex
@@ -13,7 +13,7 @@ how many words? and some games.
 \maketitle
 
 \begin{question}
-How many "words" can be spelled using the letters from the work assassins (including the word assassins)?
+How many "words" can be spelled using the letters from the word assassins (including the word assassins)?
      \begin{solution}
            The answer is \answer{$1512$}.
      \end{solution}
