--- a/Section1/Conditional-probability/Conditional-probability.tex
+++ b/Section1/Conditional-probability/Conditional-probability.tex
@@ -71,7 +71,7 @@ $20\,\%$ black on both sides.
 
 The cards are mixed up, then a single card is drawn at random and placed on the table. If the top side is black, what is the chance that the other side is white ?
      \begin{solution}
-           The answer is \answer{$5/9$}.
+           The answer is \answer{$55.56$} $\%$. (rounded to two decimal places).
      \end{solution}
 \end{question}
 
