Grammar corrections to Section1.tex
I fixed some usage of "dice" where "die" should have been, and corrected some subject-verb disagreement. I also changed the phrase "When the outcome..." to "When each outcome..."

--- a/Section1/Section1.tex
+++ b/Section1/Section1.tex
@@ -12,11 +12,11 @@ This section introduces the basic concepts of probability. \vspace{.25cm}
 
 We will consider experiments whose outcomes cannot be predicted with certainty. Examples of an experiment include rolling a die or flipping two coins.
 
-The {\it outcome space} $\Omega$ of an experiment is the set of all possible outcomes for the experiment. The outcome space for the experiment of rolling a dice is $\{\,1,2,3,4,5,6\,\}$ and the outcome space for the experiment of flipping two coins is $\{\, \text{Head-Head , Head-Tail, Tail-Head, Tail-Tail} \,\}$.
+The {\it outcome space} $\Omega$ of an experiment is the set of all possible outcomes for the experiment. The outcome space for the experiment of rolling a die is $\{\,1,2,3,4,5,6\,\}$ and the outcome space for the experiment of flipping two coins is $\{\, \text{Head-Head , Head-Tail, Tail-Head, Tail-Tail} \,\}$.
 
-An {\it event} $A$ is a subset of the outcome space: the event of rolling an even number with a dice consist of three outcomes $\{\,2,4,6\,\}$ and the event of flipping two tails with two coins consist of one outcome $\{\, \text{Tail-Tail} \,\}$. 
+An {\it event} $A$ is a subset of the outcome space: the event of rolling an even number with a die consists of three outcomes $\{\,2,4,6\,\}$ and the event of flipping two tails with two coins consists of one outcome $\{\, \text{Tail-Tail} \,\}$. 
 
-When the outcome of an experiment is just as likely as another, as in the previous two examples of experiments, the outcomes are said to be {\it equally likely}. \vspace{.25cm}
+When each outcome of an experiment is just as likely as another, as in the previous two examples of experiments, the outcomes are said to be {\it equally likely}. \vspace{.25cm}
 
 The following definition is from Wikipedia: 
 
