--- a/Section1/Section1.tex
+++ b/Section1/Section1.tex
@@ -33,7 +33,7 @@ Probabilities defined by this formula for equally likely outcomes are fractions 
 For our examples we have:
 
 \begin{align*}
-\text{Pr}&( \text{rolling an even number with a dice} ) = \frac{3}{6}\,,  \\
+\text{Pr}&( \text{rolling an even number with a die} ) = \frac{3}{6}\,,  \\
 \text{Pr}&( \text{flipping two tails with two coins} ) = \frac{1}{4}\,.
 \end{align*}
 
