--- a/masterdocument.tex
+++ b/masterdocument.tex
@@ -44,5 +44,10 @@
 \masterinput{./Section1/Equally-likely-outcomes/Equally-likely-outcomes.tex}
 \masterinput{./Section1/Conditional-probability/Conditional-probability.tex}
 \masterinput{./Section1/Bayes-rule/Bayes-rule.tex}
+\masterinput{./Section2/Section2.tex}
+\masterinput{./Section2/Sequences-of-events/Sequence-of-events.tex}
+\masterinput{./Section2/Repetead-trial/Repetead-trial.tex}
+\masterinput{./Section2/Random-variables/Random-variables.tex}
+
 
 \end{masterdocument}
