--- a/Section2/Section2.tex
+++ b/Section2/Section2.tex
@@ -25,7 +25,7 @@ Probability axioms / Binomial distribution.
 \] 
 \vspace{1cm}
 \newline
-{\bf Binomial distribution.} For $n$ independent trials, with probability $p$ of success and probability $q=1-p$ of failure on each trial, the probability of $k$ successes is given by the \href{http://en.wikipedia.org/wiki/Binomial_distribution}ß{binomial probability function:} 
+{\bf Binomial distribution.} For $n$ independent trials, with probability $p$ of success and probability $q=1-p$ of failure on each trial, the probability of $k$ successes is given by the \href{http://en.wikipedia.org/wiki/Binomial_distribution}{binomial probability function:} 
 \[
 \text{Pr}( \,\, k \text{ successess in } n \text{ trials }) = {n\choose k}p^{k}(1-p)^{n-k}\,.
 \]
