Extra beta removed

--- a/Section2/Repetead-trial/Repetead-trial.tex
+++ b/Section2/Repetead-trial/Repetead-trial.tex
@@ -38,7 +38,7 @@ The chance that at least two of the first five tosses landed heads.
 \begin{question}
 You roll a die, and I roll a die. You win if the number showing on your die is strictly greater than the one on mine. If we play this game five times, what is the chance that you  win at least three times ?
       \begin{solution}
-          The answer is \answer{$14375/41472ß$}.
+          The answer is \answer{$14375/41472$}.
      \end{solution}
 \end{question}
 
