--- a/masterdocument.tex
+++ b/masterdocument.tex
@@ -48,6 +48,8 @@
 \masterinput{./Section2/Sequences-of-events/Sequence-of-events.tex}
 \masterinput{./Section2/Repetead-trial/Repetead-trial.tex}
 \masterinput{./Section2/Random-variables/Random-variables.tex}
-
+\masterinput{./Section3/Section3.tex}
+\masterinput{./Section3/Generating-functions/Generating-functions.tex}
+\masterinput{./Section3/Discrete-random-variables/Discrete-random-variables.tex}
 
 \end{masterdocument}
