Removing braces for parens

--- a/Section3/Generating-functions/Generating-functions.tex
+++ b/Section3/Generating-functions/Generating-functions.tex
@@ -25,14 +25,14 @@ Let $X$ and $Y$ be independent random variables with moment generating functions
 \begin{question}
 Let $X$ and $Y$ be independent random variables that are both geometric distributions with likelihood of success equal to $p$. Using the previous problem, determine the moment generating function of $Z=X+Y$. 
      \begin{solution}
-          The moment generating function of $Z$ is \answer{$(  (  pe^{t} ) / (   1 - e^{t}(1-p)  )  )^{2} $}.
+          The moment generating function of $Z$ is \answer{$(  (  p e^t ) / (   1 - e^t (1-p)  )  )^2 $}.
      \end{solution}
 \end{question}
 
 \begin{question}
-Let $X$ have a Poisson distribution with expectation $\mu$. Determine the probability generating function $G(z)$ of $X$.
+Let $X$ have a Poisson distribution with expectation $m$. Determine the probability generating function $G(z)$ of $X$.
      \begin{solution}
-          The probability generating function of $X$ is \answer{$ e^{\mu*(z-1)} $}.
+          The probability generating function of $X$ is \answer{$ e^(m*(z-1)) $}.
      \end{solution}
 \end{question}
 
