Removing some more braces

--- a/Section3/Discrete-random-variables/Discrete-random-variables.tex
+++ b/Section3/Discrete-random-variables/Discrete-random-variables.tex
@@ -45,14 +45,14 @@ Suppose that $X$ and $Y$ are independent Poisson random variables with parameter
 \begin{question}
 a) $P(X=1 \text{ and } Y=2)$
      \begin{solution}
-          The answer is \answer{$4e^{-5}$}.
+          The answer is \answer{$4e^(-5)$}.
      \end{solution}
 \end{question}
 
 \begin{question}
 b) $P\bigg( \frac{X + Y}{2} \geq 1 \bigg)$
      \begin{solution}
-          The answer is \answer{$1-e^{-5}-5e^{-5}$}.
+          The answer is \answer{$1-e^(-5)-5e^(-5)$}.
      \end{solution}
 \end{question}
 
