--- a/Section3/Discrete-random-variables/Discrete-random-variables.tex
+++ b/Section3/Discrete-random-variables/Discrete-random-variables.tex
@@ -57,7 +57,7 @@ b) $P\bigg( \frac{X + Y}{2} \geq 1 \bigg)$
 \end{question}
 
 \begin{question}
-b) $P\bigg( X=1 \,\bigg\vert\, \frac{X + Y}{2} = 2  \bigg)$
+c) $P\bigg( X=1 \,\bigg\vert\, \frac{X + Y}{2} = 2  \bigg)$
      \begin{solution}
           The answer is \answer{$216/625$}.
      \end{solution}
