--- a/Section3/Generating-functions/Generating-functions.tex
+++ b/Section3/Generating-functions/Generating-functions.tex
@@ -28,8 +28,11 @@ Let $X$ and $Y$ be independent random variables with moment generating functions
 \begin{question}
 Let $X$ and $Y$ be independent random variables that are both geometric distributions with likelihood of success equal to $p$. Using the previous problem, determine the moment generating function of $Z=X+Y$.
      \begin{hint}
-          The answer must be an algebraic expression in terms of $p$, $e$ and $t$.
+          The answer must be an algebraic expression in terms of $p$, $e$ and $t$. 
      \end{hint}
+     \begin{hint}
+          Don't use $q$ instead use $p-1$.
+     \end{hint} 
      \begin{solution}
           The moment generating function of $Z$ is \answer{$(  (  p e^t ) / (   1 - e^t (1-p)  )  )^2 $}.
      \end{solution}
