--- a/Section3/Generating-functions/Generating-functions.tex
+++ b/Section3/Generating-functions/Generating-functions.tex
@@ -26,7 +26,7 @@ Let $X$ and $Y$ be independent random variables with moment generating functions
 \end{question}
 
 \begin{question}
-Let $X$ and $Y$ be independent random variables that are both geometric distributions with likelihood of success equal to $p$. Using the previous problem, determine the moment generating function of $Z=X+Y$.
+Let $X$ and $Y$ be independent random variables that are both geometric distributions with likelihood of success equal to $p$. Using the previous problem, determine the moment generating function $M_{Z}(t)$ of $Z=X+Y$.
      \begin{hint}
           The answer must be an algebraic expression in terms of $p$, $e$ and $t$. 
      \end{hint}
