--- a/Section3/Generating-functions/Generating-functions.tex
+++ b/Section3/Generating-functions/Generating-functions.tex
@@ -39,7 +39,7 @@ Let $X$ and $Y$ be independent random variables that are both geometric distribu
 \end{question}
 
 \begin{question}
-Let $X$ have a Poisson distribution with expectation $m$. Determine the probability generating function $G(z)$ of $X$.
+Let $X$ have a Poisson distribution with expectation $m$. Determine the probability generating function $G_{X}(z)$ of $X$.
      \begin{hint}
           The answer must be an algebraic expression in terms of $m$, $e$ and $z$.
      \end{hint}
