--- a/Section4/Exponential-distribution/Exponential-distribution.tex
+++ b/Section4/Exponential-distribution/Exponential-distribution.tex
@@ -28,7 +28,7 @@ Suppose component lifetimes are exponentially distributed with mean $10$ hours. 
 
 \begin{question} 
      \begin{solution}
-          c) the standard deviation of component lifetime is  \answer{$1/10$}.
+          c) the standard deviation of component lifetime is  \answer{$10$}.
      \end{solution}
 \end{question}
 
@@ -40,7 +40,7 @@ A Geiger counter is recording background radiation at an average rate of one hit
      \end{solution}
 \end{question} 
 
-If $T$ has exponential distribution with rate $m$, then $\text{int}T$, the greatest integer less than or equal to $T$, has a geometric $p$ distribution on $\{\, 0,1,2,\dots \,\}$.
+If $T$ has exponential distribution with expectation $1/m$, then $\text{int}(T)$, the greatest integer less than or equal to $T$, has a geometric $p$ distribution on $\{\, 0,1,2,\dots \,\}$.
 
  \begin{question}
      \begin{hint}
