--- a/masterdocument.tex
+++ b/masterdocument.tex
@@ -51,5 +51,14 @@
 \masterinput{./Section3/Section3.tex}
 \masterinput{./Section3/Generating-functions/Generating-functions.tex}
 \masterinput{./Section3/Discrete-random-variables/Discrete-random-variables.tex}
+\masterinput{./Section3/Poisson-distribution/Poisson-distribution.tex}
+\masterinput{./Section4/Section4.tex}
+\masterinput{./Section4/Probability-density-function/Probability-density-function.tex}
+\masterinput{./Section4/Exponential-distribution/Exponential-distribution.tex}
+\masterinput{./Section4/Approximations/Approximations.tex}
+\masterinput{./Section5/Section5.tex}
+\masterinput{./Section5/Joint-distributions/Joint-distributions.tex}
+\masterinput{./Section5/Covariance/Covariance.tex}
+\masterinput{./Section5/Some-cdf/Some-cdf.tex}
 
 \end{masterdocument}
